@@ -411,7 +411,7 @@ int gretl_isdiscrete (int t1, int t2, const double *x)
 	n = few_vals(t1, t2, x, &r);
 	if (n > FEWVALS) {
 	    d = 0;
-	} else if (r > 0.9 && n > 20) {
+	} else if (r > 0.9 && n > 30) {
 	    /* somewhat arbitrary: but if r (= ratio of distinct
 	       values to number of cases) is "too high", and the
 	       number of observations is not tiny, perhaps we should
